  Greasemonkey scripts (but still separate from the page's `window`), to
  match the original Greasemonkey implementation.
- The `--output-messages` (`-m`) flag added in v1.9.0 now also works correctly
  when using `:spawn --userscript`.
- `:version` and `--version` now don't crash if there's an (invalid)
  `/etc/os-release` file which has non-comment lines without a `=` character.

v1.10.2 (2020-04-17)
--------------------

Changed
~~~~~~~

- Windows and macOS releases now bundle Qt 5.14.2, including security fixes up
  to Chromium 80.0.3987.132.

Fixed
~~~~~

- The WhatsApp workaround now also works when using WhatsApp in languages other
  than English.
- The `mkvenv.py` script now also works properly on Windows.

v1.10.1 (2020-02-15)
--------------------

Fixed
~~~~~

- Crash when saving data fails during shutdown (which was a regression
  introduced in v1.9.0).
- Error while reading config.py when `fonts.tabs` or `fonts.debug_console` is
  set to a value including `default_size`.
- When a `state` file contains invalid UTF-8 data, a proper error is now
  displayed.

Changed
~~~~~~~

- When the Qt version changes (and also on the first start of v1.10.1 on Qt
  5.14), service workers registered by websites are now deleted. This is done
  as a workaround for QtWebEngine issues causing crashes when visiting pages
  using service workers (such as Google Mail/Drive). No persistent data should
  be affected as websites can re-register their service workers, but a (single)
  backup is kept at `webengine/Service Worker-bak` in qutebrowser's data
  directory.
- Better output on stdout when config errors occur.
- The `mkvenv.py` now ensures the latest versions of `setuptools` and `wheel`
  are installed in the virtual environment, which should speed up installation
  and fix install issues.
- The default for `colors.statusbar.command.private.bg` has been changed to a
  slightly different gray, as a workaround for a Qt issue where the cursor was
  invisible in that case.
